Jumping bug fix in accordion

--- a/index.css
+++ b/index.css
@@ -156,7 +156,7 @@ h5 {
 
 .accordion {
   width: 100%;
-  margin: 5px;
+  margin: 5px 0;
   display: flex;
   justify-content: space-between;
 }
